[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["emanueljg <emanueljohnsongodin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
sqlmodel = "^0.0.8"
fastapi-crudrouter = "^0.8.6"
fastapi = "^0.103.0"
fastapi-amis-admin = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
