[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["emanueljg <emanueljohnsongodin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
# sqlmodel = "^0.0.8"
# pydantic = {version = "^2.1", extras=["email"]}
sqlmodel = { git = "https://github.com/honglei/sqlmodel.git", branch = "main" }
fastapi = "^0.103.0"
prometheus-fastapi-instrumentator = "^6.1.0"
pytest = "^7.4.2"
httpx = "^0.25.0"
requests = "^2.31.0"
click = "^8.1.7"
poethepoet = "^0.24.4"
inflection = "^0.5.1"
asyncclick = "^8.1.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
ruff = "^0.0.287"

[tool.poe.tasks]

start = "python -m api.main" 
dev.ref = "start --db-path='forum.db' --db-wipe-on-start --seed"

lint = "ruff . --fix"
lint_ro = "ruff . --no-fix"

format = "black ."
format_ro = "black . --check"

typecheck = "mypy . --strict"

# check = "task format && task lint && task typecheck"
# check_ro = "task format_ro && task lint_ro && task typecheck"

[[tool.mypy.overrides]]
module = "fastapi_crudrouter"
ignore_missing_imports = true

[tool.ruff]
select = [ "ALL" ]
fix = true
exclude = ['stubs']
ignore = [ "D203", "D212", "S101", "EXE002", "D1", "B008" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

